Hides sidebars on small screens Issue #23010
This commit hides the Lessig Quote and Where Your Donation Goes sidebar
blocks on small screens.  It keeps the Contact Us block on small
screens.

--- a/sites/all/themes/cc_zen/sass/components/_blocks.scss
+++ b/sites/all/themes/cc_zen/sass/components/_blocks.scss
@@ -10,6 +10,14 @@
   }
 }
 
+.block-lessig-quote,
+.block-where-donation-goes {
+  display: none;
+  @include respond-to(small) {
+    display: block;
+  }
+}
+
 .block-where-donation-goes {
   img {
     width: 80%;
